--- a/porfolio.html
+++ b/porfolio.html
@@ -89,10 +89,10 @@
             <span class="logo-color">Web</span>Studio</a>
         <address class="contacts">
             <ul class="list">
-                <a href="https://goo.gl/maps/vo4VrYKB1VTrYMW19" class="adress link" target="_blanc">г. Киев, пр-т
-                    Леси Украинки, 26</a> <br>
-                <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a> <br>
-                <a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <li><a href="https://goo.gl/maps/vo4VrYKB1VTrYMW19" class="adress link" target="blanc">г. Киев, пр-т
+                    Леси Украинки, 26</a></li>
+                <li><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </div>
