--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         <!-- заголовок -->
         <section class="hero">
             <div class="container">
-                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                <h1 class="hero-title">Эффективные решения для
+                    вашего
+                    бизнеса</h1>
                 <button type="button" class="button primary">Заказать услугу</button>
             </div>
         </section>
@@ -126,10 +128,10 @@
                 <span class="logo-color">Web</span>Studio</a>
             <address class="contacts">
                 <ul class="list">
-                    <li><a href="https://goo.gl/maps/vo4VrYKB1VTrYMW19" class="adress link" target="blanc">г. Киев, пр-т
+                    <li class="item"><a href="https://goo.gl/maps/vo4VrYKB1VTrYMW19" class="adress link" target="blanc">г. Киев, пр-т
                         Леси Украинки, 26</a></li>
-                    <li><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li class="item"><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="item"><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
