--- a/porfolio.html
+++ b/porfolio.html
@@ -31,7 +31,7 @@
     </div>
   </header>
   <main>
-    <!-- портфолио -->
+       <!-- портфолио -->
     <section class="portfolio">
       <div class="container">
         <h2 class="title-invisable">портфолио</h2>
@@ -44,39 +44,55 @@
         </ul>
         <ul class="portfolio-list list">
           <li class="item"><img src="./images/img8.jpg" alt="ноутбук" width="370" height="294">
-            <h2 class="portfolio-title">Технокряк</h2>
+            <div class="card-content">
+              <h2 class="portfolio-title">Технокряк</h2>
             <p class="porfolio-text">Веб-сайты</p>
+            </div>
           </li>
           <li class="item"><img src="./images/img9.jpg" alt="баскетболисты" width="370" height="294">
-            <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+            <div class="card-content">
+              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
             <p class="porfolio-text">Дизайн</p>
+            </div>
           </li>
           <li class="item"><img src="./images/img10.jpg" alt="логотип ресторана" width="370" height="294">
-            <h2 class="portfolio-title">Ресторан Seafood</h2>
+            <div class="card-content">
+              <h2 class="portfolio-title">Ресторан Seafood</h2>
             <p class="porfolio-text">Приложения</p>
+            </div>
           </li><li class="item"><img src="./images/img11.jpg" alt="наушники" width="370" height="294">
-            <h2 class="portfolio-title">Проект Prime</h2>
+            <div class="card-content">
+              <h2 class="portfolio-title">Проект Prime</h2>
             <p class="porfolio-text">Маркетинг</p>
+            </div>
           </li>
           <li class="item"><img src="./images/img12.jpg" alt="две коробки" width="370" height="294">
-            <h2 class="portfolio-title">Проект Boxes</h2>
+            <div class="card-content">
+              <h2 class="portfolio-title">Проект Boxes</h2>
             <p class="porfolio-text">Приложения</p>
+            </div>
           </li>
           <li class="item"><img src="./images/img13.jpg" alt="аймак" width="370" height="294">
-            <h2 class="portfolio-title">Inspiration has no Borders</h2>
+            <div class="card-content">
+              <h2 class="portfolio-title">Inspiration has no Borders</h2>
             <p class="porfolio-text">Веб-сайты</p>
+            </div>
           </li>
           <li class="item"><img src="./images/img14.jpg" alt="журнал" width="370" height="294">
-            <h2 class="portfolio-title">Издание Limited Edition</h2>
+            <div class="card-content">
+              <h2 class="portfolio-title">Издание Limited Edition</h2>
             <p class="porfolio-text">Дизайн</p>
+            </div>
           </li>
           <li class="item"><img src="./images/img15.jpg" alt="бирка" width="370" height="294">
-            <h2 class="portfolio-title">Проект LAB</h2>
-            <p class="porfolio-text">Маркетинг</p>
+            <div class="card-content"><h2 class="portfolio-title">Проект LAB</h2>
+              <p class="porfolio-text">Маркетинг</p></div>
           </li>
           <li class="item"><img src="./images/img16.jpg" alt="руки печатающие на ноутбуке" width="370" height="294">
-            <h2 class="portfolio-title">Growing Business</h2>
-            <p class="porfolio-text">Приложения</p>
+            <div class="card-content">
+              <h2 class="portfolio-title">Growing Business</h2>
+            <p class="porfolio-text">Приложения</p> class="card-content"
+            </div>
           </li>
         </ul>
       </div>
@@ -89,12 +105,12 @@
             <span class="logo-color">Web</span>Studio</a>
         <address class="contacts">
             <ul class="list">
-                <li><a href="https://goo.gl/maps/vo4VrYKB1VTrYMW19" class="adress link" target="blanc">г. Киев, пр-т
+                <li class="item"><a href="https://goo.gl/maps/vo4VrYKB1VTrYMW19" class="adress link" target="blanc">г. Киев, пр-т
                     Леси Украинки, 26</a></li>
-                <li><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="item"><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="item"><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </div>
 </footer>
-</body> class="item"
+</body>
