--- a/index.html
+++ b/index.html
@@ -21,14 +21,25 @@
                 <a href="./index.html" class="logo link">
                     <span class="logo-color">Web</span>Studio</a>
                 <ul class="site-nav list">
-                    <li class="item"><a href="./index.html" class="link current">Студия</a></li>
-                    <li class="item"><a href="./porfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                    <li class="item"><a href="./porfolio.html" class="link current">Портфолио</a></li>
                     <li class="item"><a href="http://www.google.com" class="link">Контакты</a></li>
                 </ul>
-                <ul class="site-contacts list">
-                    <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                    <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-                </ul>
+                <address class="header-adress">
+                    <ul class="site-contacts list">
+                        <li class="contact-item item">
+                            <a href="mailto:info@devstudio.com" class="link">
+                                <svg class="contact-icon" width="16" height="12">
+                                    <use href="./icons/sprite.svg#envelope"></use>
+                                </svg>
+                                info@devstudio.com</a>
+                        </li>
+                        <li class="contact-item item"><a href="tel:+380961111111" class="link"><svg class="contact-icon"
+                                    width="10" height="12">
+                                    <use href="./icons/sprite.svg#tel"></use>
+                                </svg>+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
             </nav>
         </div>
     </header>
@@ -47,27 +58,27 @@
             <div class="container">
                 <h2 class="title-invisable">наши преимущества</h2>
                 <ul class="features-list list">
-                    <li class="item">
+                    <li class="item attention">
                         <h3 class="features-title">Внимание к деталям</h3>
                         <p class="features-text">Идейные соображения, а также
                             начало повседневной работы по
                             формированию
                             позиции.</p>
                     </li>
-                    <li class="item">
+                    <li class="item  punctuality">
                         <h3 class="features-title">Пунктуальность</h3>
                         <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров
                             влечет
                             за собой.
                         </p>
                     </li>
-                    <li class="item">
+                    <li class="item planing">
                         <h3 class="features-title">Планирование</h3>
                         <p class="features-text">Равным образом консультация с широким активом в значительной степени
                             обуславливает.
                         </p>
                     </li>
-                    <li class="item">
+                    <li class="item tech">
                         <h3 class="features-title">Современные технологии</h3>
                         <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых
                             заданий.</p>
@@ -99,41 +110,248 @@
                 <ul class="list">
                     <li class="item">
                         <img src="./images/img(4).jpg" alt="дизайнер" width="270" height="260">
-                        <h3 class="name">Игорь Демьяненко</h3>
-                        <p class="position">Product Designer</p>
+                        <div class="team-content">
+                            <h3 class="name">Игорь Демьяненко</h3>
+                            <p class="position">Product Designer</p>
+                            <ul class="social-list list">
+                                <li class="social-list-item">
+                                    <a href="#" class="social-link link"><svg class="social-list-svg">
+                                            <use href="./icons/sprite.svg#instagram"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-link link">
+                                        <svg class="social-list-svg">
+                                            <use href="./icons/sprite.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-link link">
+                                        <svg class="social-list-svg">
+                                            <use href="./icons/sprite.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-link link">
+                                        <svg class="social-list-svg">
+                                            <use href="./icons/sprite.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="item">
                         <img src="./images/img(5).jpg" alt="разработчик" width="270" height="260">
-                        <h3 class="name">Ольга Репина</h3>
-                        <p class="position">Frontend Developer</p>
+                        <div class="team-content">
+                            <h3 class="name">Ольга Репина</h3>
+                            <p class="position">Frontend Developer</p>
+                            <ul class="social-list list">
+                                <li class="social-list-item">
+                                    <a href="#" class="social-link link"><svg class="social-list-svg">
+                                            <use href="./icons/sprite.svg#instagram"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-list-svg">
+                                            <use href="./icons/sprite.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-list-svg">
+                                            <use href="./icons/sprite.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-list-svg">
+                                            <use href="./icons/sprite.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="item">
                         <img src="./images/img(6).jpg" alt="маркетолог" width="270" height="260">
-                        <h3 class="name">Николай Тарасов</h3>
-                        <p class="position">Marketing</p>
+                        <div class="team-content">
+                            <h3 class="name">Николай Тарасов</h3>
+                            <p class="position">Marketing</p>
+                            <ul class="social-list list">
+                                <li class="social-list-item">
+                                    <a href="#" class="social-link link"><svg class="social-list-svg">
+                                            <use href="./icons/sprite.svg#instagram"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-list-svg">
+                                            <use href="./icons/sprite.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-list-svg">
+                                            <use href="./icons/sprite.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-list-svg">
+                                            <use href="./icons/sprite.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="item">
                         <img src="./images/img(7).jpg" alt="дизайнер интерфейса" width="270" height="260">
-                        <h3 class="name">Михаил Ермаков</h3>
-                        <p class="position">UI Designer</p>
+                        <div class="team-content">
+                            <h3 class="name">Михаил Ермаков</h3>
+                            <p class="position">UI Designer
+                            <ul class="social-list list">
+                                <li class="social-list-item">
+                                    <a href="#" class="social-link link"><svg class="social-list-svg">
+                                            <use href="./icons/sprite.svg#instagram"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-list-svg">
+                                            <use href="./icons/sprite.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-list-svg">
+                                            <use href="./icons/sprite.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="#" class="social-link link">
+                                        <svg class="social-list-svg">
+                                            <use href="./icons/sprite.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- постоянные клиенты -->
+        <section class="clients">
+            <div class="container">
+                <h2 class="clients-title">Постоянные клиенты</h2>
+                <ul class="clients-list list">
+                    <li class="clients-list-item">
+                        <a href="#" class="clients-link link">
+                            <svg class="clients-list-svg" width="44" height="49">
+                                <use href=" ./icons/sprite.svg#icon-logo1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a href="#" class="clients-link link">
+                            <svg class="clients-list-svg" width="40" height="52">
+                                <use href=" ./icons/sprite.svg#icon-logo2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a href="#" class="clients-link link">
+                            <svg class="clients-list-svg" width="41" height="53">
+                                <use href=" ./icons/sprite.svg#icon-logo3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a href="#" class="clients-link link">
+                            <svg class="clients-list-svg" width="80" height="42">
+                                <use href=" ./icons/sprite.svg#icon-logo4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a href="#" class="clients-link link">
+                            <svg class="clients-list-svg" width="59" height="47">
+                                <use href=" ./icons/sprite.svg#icon-logo5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a href="#" class="clients-link link">
+                            <svg class="clients-list-svg" width="88" height="45">
+                                <use href=" ./icons/sprite2.svg#icon-logo6"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
         </section>
     </main>
     <!-- футер -->
-    <footer class="footer">
+    <footer class=" footer">
         <div class="container">
-            <a href="./index.html" class="logo link">
-                <span class="logo-color">Web</span>Studio</a>
-            <address class="contacts">
-                <ul class="list">
-                    <li class="item"><a href="https://goo.gl/maps/vo4VrYKB1VTrYMW19" class="adress link" target="blanc">г. Киев, пр-т
-                        Леси Украинки, 26</a></li>
-                    <li class="item"><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="item"><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <div>
+                <a href="./index.html" class="logo link">
+                    <span class="logo-color">Web</span>Studio</a>
+                <address class="contacts">
+                    <ul class="list">
+                        <li class="item"><a href="https://goo.gl/maps/vo4VrYKB1VTrYMW19" class="adress link"
+                                target="blanc">г. Киев,
+                                пр-т
+                                Леси Украинки, 26</a></li>
+                        <li class="item"><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li class="item"><a class="tel link" href="tel:+380961111111">+38 096
+                                111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="social-links-list">
+                <p class="connect">присоединяйтесь</p>
+                <ul class="social-list list">
+                    <li class="social-list-item">
+                        <a href="#" class="social-link link"><svg class="social-list-svg">
+                                <use href="./icons/sprite.svg#instagram"></use>
+                            </svg></a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="#" class="social-link link">
+                            <svg class="social-list-svg">
+                                <use href="./icons/sprite.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="#" class="social-link link">
+                            <svg class="social-list-svg">
+                                <use href="./icons/sprite.svg#facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="#" class="social-link link">
+                            <svg class="social-list-svg">
+                                <use href="./icons/sprite.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
