--- a/porfolio.html
+++ b/porfolio.html
@@ -23,15 +23,26 @@
           <li class="item"><a href="./porfolio.html" class="link current">Портфолио</a></li>
           <li class="item"><a href="http://www.google.com" class="link">Контакты</a></li>
         </ul>
-        <ul class="site-contacts list">
-          <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-          <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
+        <address class="header-adress">
+          <ul class="site-contacts list">
+            <li class="contact-item item">
+              <a href="mailto:info@devstudio.com" class="link">
+                <svg class="contact-icon" width="16" height="12">
+                  <use href="./icons/sprite.svg#envelope"></use>
+                </svg>
+                info@devstudio.com</a>
+            </li>
+            <li class="contact-item item"><a href="tel:+380961111111" class="link"><svg class="contact-icon" width="10"
+                  height="12">
+                  <use href="./icons/sprite.svg#tel"></use>
+                </svg>+38 096 111 11 11</a></li>
+          </ul>
+        </address>
       </nav>
     </div>
   </header>
   <main>
-       <!-- портфолио -->
+    <!-- портфолио -->
     <section class="portfolio">
       <div class="container">
         <h2 class="title-invisable">портфолио</h2>
@@ -46,52 +57,55 @@
           <li class="item"><img src="./images/img8.jpg" alt="ноутбук" width="370" height="294">
             <div class="card-content">
               <h2 class="portfolio-title">Технокряк</h2>
-            <p class="porfolio-text">Веб-сайты</p>
+              <p class="porfolio-text">Веб-сайты</p>
             </div>
           </li>
           <li class="item"><img src="./images/img9.jpg" alt="баскетболисты" width="370" height="294">
             <div class="card-content">
               <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-            <p class="porfolio-text">Дизайн</p>
+              <p class="porfolio-text">Дизайн</p>
             </div>
           </li>
           <li class="item"><img src="./images/img10.jpg" alt="логотип ресторана" width="370" height="294">
             <div class="card-content">
               <h2 class="portfolio-title">Ресторан Seafood</h2>
-            <p class="porfolio-text">Приложения</p>
+              <p class="porfolio-text">Приложения</p>
             </div>
-          </li><li class="item"><img src="./images/img11.jpg" alt="наушники" width="370" height="294">
+          </li>
+          <li class="item"><img src="./images/img11.jpg" alt="наушники" width="370" height="294">
             <div class="card-content">
               <h2 class="portfolio-title">Проект Prime</h2>
-            <p class="porfolio-text">Маркетинг</p>
+              <p class="porfolio-text">Маркетинг</p>
             </div>
           </li>
           <li class="item"><img src="./images/img12.jpg" alt="две коробки" width="370" height="294">
             <div class="card-content">
               <h2 class="portfolio-title">Проект Boxes</h2>
-            <p class="porfolio-text">Приложения</p>
+              <p class="porfolio-text">Приложения</p>
             </div>
           </li>
           <li class="item"><img src="./images/img13.jpg" alt="аймак" width="370" height="294">
             <div class="card-content">
               <h2 class="portfolio-title">Inspiration has no Borders</h2>
-            <p class="porfolio-text">Веб-сайты</p>
+              <p class="porfolio-text">Веб-сайты</p>
             </div>
           </li>
           <li class="item"><img src="./images/img14.jpg" alt="журнал" width="370" height="294">
             <div class="card-content">
               <h2 class="portfolio-title">Издание Limited Edition</h2>
-            <p class="porfolio-text">Дизайн</p>
+              <p class="porfolio-text">Дизайн</p>
             </div>
           </li>
           <li class="item"><img src="./images/img15.jpg" alt="бирка" width="370" height="294">
-            <div class="card-content"><h2 class="portfolio-title">Проект LAB</h2>
-              <p class="porfolio-text">Маркетинг</p></div>
+            <div class="card-content">
+              <h2 class="portfolio-title">Проект LAB</h2>
+              <p class="porfolio-text">Маркетинг</p>
+            </div>
           </li>
           <li class="item"><img src="./images/img16.jpg" alt="руки печатающие на ноутбуке" width="370" height="294">
             <div class="card-content">
               <h2 class="portfolio-title">Growing Business</h2>
-            <p class="porfolio-text">Приложения</p> class="card-content"
+              <p class="porfolio-text">Приложения</p> class="card-content"
             </div>
           </li>
         </ul>
@@ -99,18 +113,55 @@
     </section>
   </main>
   <!-- футер -->
-  <footer class="footer">
+  <footer class=" footer">
     <div class="container">
+      <div>
         <a href="./index.html" class="logo link">
-            <span class="logo-color">Web</span>Studio</a>
+          <span class="logo-color">Web</span>Studio</a>
         <address class="contacts">
-            <ul class="list">
-                <li class="item"><a href="https://goo.gl/maps/vo4VrYKB1VTrYMW19" class="adress link" target="blanc">г. Киев, пр-т
-                    Леси Украинки, 26</a></li>
-                <li class="item"><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="item"><a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+          <ul class="list">
+            <li class="item"><a href="https://goo.gl/maps/vo4VrYKB1VTrYMW19" class="adress link" target="blanc">г. Киев,
+                пр-т
+                Леси Украинки, 26</a></li>
+            <li class="item"><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="item"><a class="tel link" href="tel:+380961111111">+38 096
+                111 11 11</a></li>
+          </ul>
         </address>
+      </div>
+      <div class="social-links-list">
+        <p class="connect">присоединяйтесь</p>
+        <ul class="social-list list">
+          <li class="social-list-item">
+            <a href="#" class="social-link link"><svg class="social-list-svg">
+                <use href="./icons/sprite.svg#instagram"></use>
+              </svg></a>
+          </li>
+          <li class="social-list-item">
+            <a href="#" class="social-link link">
+              <svg class="social-list-svg">
+                <use href="./icons/sprite.svg#twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="#" class="social-link link">
+              <svg class="social-list-svg">
+                <use href="./icons/sprite.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="#" class="social-link link">
+              <svg class="social-list-svg">
+                <use href="./icons/sprite.svg#linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
-</footer>
+
+  </footer>
 </body>
